# bartlby-agent

./: Makefile  Makefile.conf  Makefile.conf.in  agent.c  agent_old.c  agent_sync.cfg.in  agent_sync.sh  agent_v2.c  bartlby.cfg  bartlby.cfg.in  bartlby_agent  cmd.c  config.c  config.status  configure  configure.ac  global.c  postinstall-pak  postinstall-pak.in  preinstall-pak
autom4te.cache/: output.0  traces.0
